# nearai_langchain

./: .codespellrc  .gitignore  CHANGELOG.md  README.md  codespell_ignore.txt  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py
examples/cdp_langchain_chatbot/: README.md  agent.py  metadata.json  pyproject.toml
examples/create_react_agent/: README.md  agent.py  metadata.json  pyproject.toml
examples/create_react_agent_with_tools/: README.md  agent.py  metadata.json  pyproject.toml
examples/nearai_fireworks_usage/: agent.py  metadata.json
examples/nillion_secretvault_agent/: .env.example  .gitignore  README.md  agent.py  metadata.json  pyproject.toml
nearai_langchain/: __init__.py
