[tool.poetry]
name = "create_langchain_react_agent_with_tools_example"
version = "0.0.1"
description = "Langchain create_react_agent with tools example"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
nearai-langchain = "^0.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
